@startuml
class estadisticas.Team {
- String name
- ArrayList<Player> players
- int tableScore
- int goalCounter
+ String getName()
+ void setName(String)
+ ArrayList<Player> getPlayers()
+ void addPlayer(Player)
+ void removePlayer(Player)
+ int getTableScore()
+ void setTableScore(int)
+ int getGoalCounter()
+ void setGoalCounter(int)
}
class estadisticas.Season {
- String name
- Date startDate
- Date finishDate
- ArrayList<Team> teams
- ArrayList<Match> matches
+ String getName()
+ void setName(String)
+ Date getStartDate()
+ void setStartDate(Date)
+ Date getFinishDate()
+ void setFinishDate(Date)
+ void addTeam(Team)
+ void removeTeam(Team)
+ ArrayList<Team> getTeams()
+ void setTeams(ArrayList<Team>)
+ void addMatch(Match)
+ void removeMatch(Match)
+ ArrayList<Match> getMatches()
+ void setMatches(ArrayList<Match>)
}
class estadisticas.Player {
- String name
- int number
- String position
- int goalCounter
- Team team
+ String getName()
+ void setName(String)
+ int getNumber()
+ void setNumber(int)
+ String getPosition()
+ void setPosition(String)
+ int getGoalCounter()
+ void setGoalCounter(int)
+ Team getTeam()
+ void setTeam(Team)
}
class Main {
+ {static} void main(String[])
}
class estadisticas.Match {
- Date date
- int visitantGoals
- int localGoals
+ Date getDate()
+ void setDate(Date)
+ int getVisitantGoals()
+ void setVisitantGoals(int)
+ void incrementVisitantGoals()
+ int getLocalGoals()
+ void setLocalGoals(int)
+ void incrementLocalGoals()
}

estadisticas.Team o-- estadisticas.Player

estadisticas.Season o-- estadisticas.Team

estadisticas.Team -- estadisticas.Match

estadisticas.Match --o estadisticas.Season

estadisticas.Team --* estadisticas.Season
@enduml